--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <div class="logo"><img src="./pics/logo.jpg" alt="ClipMini" width="78px"></div>
-            <ul>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">&#9776;</label>
+            <!-- <div class="sub-div"></div> -->
+            <!-- <div class="overlay" id="overlay"></div> -->
+            <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Search</a></li>
@@ -22,38 +26,35 @@
         <div class="hero">
                 <img src="./pics/top-section.jpg" alt="topsec" width="100%">
                 <div class="centered">
-                    <!-- <h1>Video Experience for the Web</h1> -->
-                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quae aspernatur veritatis architecto excepturi id?</p> -->
+                    <h2>Video Experience Web</h2>
                     <button>Sign Up</button>
-                </div>
-        </div>
-        <!-- <h1>A Better Video Experience for the Web</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quae aspernatur veritatis architecto excepturi id?</p>
-        <button>Sign Up</button> -->
+    </div>
+</div>
+
     </header>
     <section class="video-highlights">
         <h2>Help your viewers discover what matters most to them!</h2>
         <div class="videos">
             <div class="video">
-                <img src="./pics/video-ronconway_280x187.png" alt="Video 1">
+                <img src="./pics/video-emma_280x187.png" alt="Video 1">
                 <p>@01:00:20 Greatest thing about Bill and Steve's relationship...</p>
-                <p>3 people tagged &nbsp; • &nbsp; 200 views</p>
-                <button>Embed</button>
-                <button>Share</button>
+                <p><img src="./pics/icons8-price-tag-50.png" width="5%" alt="">3 people tagged &nbsp; • &nbsp; 200 <img src="./pics/icons8-forward-arrow-26.png" width="5%"></p>
+                <button>Embed <img src="./pics/icons8-forward-arrow-26.png" width="30%"></button>
+                <button>Share  <img src="./pics/icons8-forward-arrow-26.png" width="30%"></button>
             </div>
             <div class="video">
-                <img src="./pics/video-emma_280x187.png" alt="Video 2">
+                <img src="./pics/video-ronconway_280x187.png" alt="Video 2">
                 <p>@01:55 Hodor, Emma Stone greatest thing about  the  the Bill...</p>
-                <p>3 people tagged &nbsp; • &nbsp; 200 views</p>
-                <button>Embed</button>
-                <button>Share</button>
+                <p><img src="./pics/icons8-price-tag-50.png" width="5%" alt="">3 people tagged &nbsp; • &nbsp; 200 <img src="./pics/icons8-forward-arrow-26.png" width="5%"></p>
+                <button>Embed <img src="./pics/icons8-forward-arrow-26.png" width="30%"></button>
+                <button>Share   <img src="./pics/icons8-forward-arrow-26.png" width="30%"></button>
             </div>
             <div class="video">
-                <img src="./pics/video-ronconway_280x187.png" alt="Video 3">
+                <img src="./pics/video-emma_280x187.png" alt="Video 3">
                 <p>@13:34 The Expert Real Pip-Boy with  the screen experience...</p>
-                <p>3 people tagged &nbsp; • &nbsp; 200 views</p>
-                <button>Embed</button>
-                <button>Share</button>
+                <p><img src="./pics/icons8-price-tag-50.png" width="5%" alt="">3 people tagged &nbsp; • &nbsp; 200  <img src="./pics/icons8-forward-arrow-26.png" width="5%"></p>
+                <button>Embed  <img src="./pics/icons8-forward-arrow-26.png" width="30%"></button>
+                <button>Share <img src="./pics/icons8-forward-arrow-26.png" width="30%"></button>
             </div>
         </div>
     </section>
@@ -64,49 +65,62 @@
             <div class="feature">
                 <img src="./pics/feature1.png" alt="Meaningful sharing">
                 <h3>Meaningful Sharing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae expedita eius molestias, pariatur odio exercitationem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipis Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, officia ut illo doloribus earum sed temporibus! Quidem, porro. Dolorem dicta quia voluptatibus rem suscipit aut vel natus. Veniam, architecto dolore!icing elit. Vitae expedita eius molestias, pariatur odio exercitationem.</p>
             </div>
             <div class="feature">
                 <img src="./pics/index-embeds_300x120.png" alt="Interactive Embed">
                 <h3>Interactive Embeds</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae expedita eius molestias, pariatur odio exercitationem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur a Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, libero dignissimos ducimus reiciendis quo vitae porro ipsum illo praesentium a recusandae blanditiis labore soluta numquam earum distinctio dolor harum quidem.dipisicing elit. Vitae expedita eius molestias, pariatur odio exercitationem.</p>
             </div>
             <div class="feature">
-                <img src="./pics/index-tagging_300x120.png" alt="">
+                <img src="./pics/index-tagging_300x120.png" alt="Smart tagging">
                 <h3>Smart Tagging</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae expedita eius molestias, pariatur odio exercitationem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae expedita Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi beatae, alias sapiente temporibus recusandae illo eum vitae, labore neque numquam voluptatibus, ipsam repudiandae. Nulla molestiae eligendi illo perferendis possimus quasi. eius molestias, pariatur odio exercitationem.</p>
             </div>
         </div>
     </section>
 
     <section class="benefits">
-        <h2>Benefits</h2> <br><br>
-        <div class="benefit-list">
-            <div class="benefit">
-                <h3>Personalized Experience</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis expedita eius ea molestias.</p>
+        <div class="benefits">
+            <h2>Benefits</h2>
+            <div class="benefit-item">
+                <div class="icon personalized"></div>
+                <div class="content">
+                    <h3>Personalized Experience</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi nobis, maiores vero accusantium, deleniti amet quod praesentium..</p>
+                </div>
             </div>
-            <div class="benefit">
-                <h3>Improved Engagement</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis expedita eius ea molestias.</p>
+            <div class="benefit-item">
+                <div class="icon engagement"></div>
+                <div class="content">
+                    <h3>Improved Engagement</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officiis molestias omnis, corrupti harum excepturi.</p>
+                </div>
             </div>
-            <div class="benefit">
-                <h3>Actionable Analytics</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis expedita eius ea molestias.</p>
+            <div class="benefit-item">
+                <div class="icon analytics"></div>
+                <div class="content">
+                    <h3>Actionable Analytics</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ipsum porro voluptate nulla non, reiciendis repudiandae commodi. </p>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="collections">
-        <h2>ClipMine Video Collections</h2>
-        <div class="collection-list">
-            <div class="collection">
-                <img src="./pics/collection1.png" alt="Startups">
-                <h3>STARTUPS</h3>
-            </div>
-            <div class="collection">
-                <img src="./pics/collection2.png" alt="Machine Learning">
-                <h3>MACHINE LEARNING</h3>
+    <section>
+      
+        <div class="video-collections-container">
+            <div class="video-collections">
+                <h2>ClipMine Video Collections</h2>
+                <div class="video-collection">
+                    <div class="video-thumbnail startups">
+                        <div class="overlay">STARTUPS</div>
+                    </div>
+                    <div class="video-thumbnail machine-learning">
+                        <div class="overlay">MACHINE LEARNING</div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, libero aspernatur. Dicta voluptates modi rem?</p>
             </div>
         </div>
     </section>
